cicd/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  selector:
    app: demo
  type: ClusterIP
  ports:
    - name: demo
      port: 8888
      targetPort: 8888
